add paypal payment

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,8 +4,8 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-        <strong class="blue-text">MDB</strong>
+      <a class="navbar-brand waves-effect" href="{% url 'core:home' %}" target="_blank">
+        <strong class="blue-text">Onine Store</strong>
       </a>
 
       <!-- Collapse -->
