--- a/templates/home.html
+++ b/templates/home.html
@@ -67,8 +67,12 @@
 
               <!--Card image-->
               <div class="view overlay">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"
+                <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"
+                  alt=""> -->
+                  {% if item.image %}
+                  <img src="{{ item.image.url }}" class="card-img-top"
                   alt="">
+                  {% endif %}
                 <a href="{{ item.get_absolute_url }}">
                   <div class="mask rgba-white-slight"></div>
                 </a>
